# veterinaria-inteligente

./: .dockerignore  .env.example  .gitignore  .gitpod.yml  .replit  ACCESO_WEB.html  COMO_EJECUTAR.md  COMPARTIR_CON_EQUIPO.md  Dockerfile  GUIA_GITHUB.html  INSTRUCCIONES_PARA_COLABORADORES.md  README.md  TUTORIAL_GITHUB.md  check_db.py  pyproject.toml  render.yaml  requirements.txt  start.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6cc9dca5ac95_init.py
app/: main.py
app/api/routers/: admin.py  ai.py  ai_dashboard.py  (+14 more)
app/core/: config.py
app/db/: counts.py  database.py  models.py  reset_db.py  seed.py
app/ml/: features.py  intent.py  keywords.py  model.py  noshow.py  predict.py  render_confusion_matrix.py  sentiment.py  show_metrics.py  train.py
app/schemas/: appointment.py  clinical_record.py  common.py  intent.py  nlp.py  owner.py  pet.py  report.py  sentiment.py  vaccination.py
docs/: FUNCIONALIDADES_EDITAR_ELIMINAR.md  Informe_Veterinaria_Inteligente.md  MEJORAS_PREDICCION_IA.md  Presentacion_Proyecto.md  URLS_ACCESO.md  pdf.css
notebooks/: intent_model_analysis.ipynb
scripts/: export_report_pdf.ps1  publish_to_github.ps1  reset_db_and_smoke.ps1  reset_seed_and_run.ps1  run_and_open.bat  run_and_open.ps1  seed_internet.ps1  setup_and_test.ps1  smoke_e2e.ps1  subir_a_github.ps1  test_ia_dashboard.ps1
tests/: test_ai_intent.py  test_ai_intent_topk.py  test_ai_keywords.py  test_ai_noshow.py  test_ai_sentiment.py  test_records.py  test_reports.py  test_schedule.py  test_vaccinations.py
(+6 files in other folders)
