[project]
name = "veterinaria-inteligente"
version = "0.1.0"
description = "API para una clínica veterinaria con módulos ML y recordatorios"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "SQLAlchemy>=2.0",
    "pydantic>=2.4",
    "email-validator>=2.1",
    "python-multipart>=0.0.9",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.2",
    "httpx>=0.23",
    "python-dotenv>=1.0",
    "joblib>=1.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-bdd>=6.0",
    "requests>=2.28",
    "ruff",
    "black"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
